--- a/test/scripts/body.html
+++ b/test/scripts/body.html
@@ -14,7 +14,7 @@
         <h5 id="this-is-a-heading-5">This is a Heading 5</h5>
         <h6 id="this-is-a-heading-6">This is a Heading 6</h6>
         <ul>
-            <li>Red</li>
+            <li>Green</li>
             <li>Green</li>
             <li>Blue</li>
         </ul>
